--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+__pycache__/
+*.pyc
+
+# Virtual environments
+venv/
+backend/venv/
+
+# Ignore all __pycache__ in subdirectories
+backend/__pycache__/
+backend/Bakery/__pycache__/
+backend/Pastry/__pycache__/
+git rm -r --cached backend/__pycache__/ backend/Bakery/__pycache__/ backend/Pastry/ backend/venv/
+__pycache__/
+*.pyc
+
