--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,14 @@
 # Core dependencies
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.25
-Flask-Marshmallow==0.15.0
-marshmallow-sqlalchemy==0.30.0
-marshmallow==3.21.0
-Flask-Cors==4.0.0
-email-validator==2.1.0.post1
-python-dotenv==1.0.1
+werkzeug==2.0.2
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
+Flask-Marshmallow==0.14.0
+marshmallow-sqlalchemy==0.26.1
+marshmallow==3.13.0
+Flask-Cors==3.0.10
+email-validator==1.1.3
+python-dotenv==0.19.0
 
 # Caching
-Flask-Caching==2.1.0
-redis==5.0.1  # Optional: for production caching
-
-# Production dependencies
-gunicorn==21.2.0  # For production deployment
-psycopg2-binary==2.9.9  # For PostgreSQL in production
+Flask-Caching==1.10.1
