--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "frontend": "file:",
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
