--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ marshmallow==3.21.1
 Flask-Cors==4.0.1
 email-validator==2.1.1
 python-dotenv==1.0.1
+flask-bcrypt==1.0.1
 
 # Caching
 Flask-Caching==2.1.0
