--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ dist-ssr
 # Ignore all __pycache__ in subdirectories
 backend/__pycache__/
 backend/Bakery/__pycache__/
-backend/Pastry/__pycache__/
-git rm -r --cached backend/__pycache__/ backend/Bakery/__pycache__/ backend/Pastry/ backend/venv/
+backend/product/__pycache__/
+git rm -r --cached backend/__pycache__/ backend/Bakery/__pycache__/ backend/product/ backend/venv/
 
 # Virtual environment
 venv/
