Pastry to product in frontend

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -32,8 +32,8 @@ backend/venv/
 # Ignore all __pycache__ in subdirectories
 backend/__pycache__/
 backend/Bakery/__pycache__/
-backend/Pastry/__pycache__/
-git rm -r --cached backend/__pycache__/ backend/Bakery/__pycache__/ backend/Pastry/ backend/venv/
+backend/Product/__pycache__/
+git rm -r --cached backend/__pycache__/ backend/Bakery/__pycache__/ backend/Product/ backend/venv/
 __pycache__/
 *.pyc
 
