--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,16 @@ flask-bcrypt==1.0.1
 
 # Caching
 Flask-Caching==2.1.0
+
+# Testing
+pytest==7.4.0 
+pytest-flask==1.0.0
+pytest-cov==4.1.0
+pytest-mock==3.10.0
+
+# Linting and formatting
+
+#Authentication
+#Flask-JWT-Extended==4.4.4 # Version 4.4.4 is not compatible with Flask 3.0.2
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
