--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
 # Core dependencies
 werkzeug==3.0.2
-Flask==3.0.2
+Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.29
 Flask-Marshmallow==1.2.1
 marshmallow-sqlalchemy==0.29.0
 marshmallow==3.21.1
-Flask-Cors==4.0.1
+Flask-Cors==4.0.0
 email-validator==2.1.1
-python-dotenv==1.0.1
+python-dotenv==1.0.0
 flask-bcrypt==1.0.1
 
 # Caching
@@ -23,6 +23,6 @@ pytest-mock==3.10.0
 # Linting and formatting
 
 #Authentication
-#Flask-JWT-Extended==4.4.4 # Version 4.4.4 is not compatible with Flask 3.0.2
+flask-jwt-extended==4.5.2
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
