--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,10 @@
+VITE_API_BASE_URL=http://127.0.0.1:5000
+
 # Security
 JWT_SECRET_KEY=your-secret-key-change-this-in-production
 
-# CORS Configuration
-ALLOWED_ORIGINS=http://127.0.0.1:5000,http://localhost:5173
+# CORS Configuration - Single origin for simplicity
+ALLOWED_ORIGIN=http://localhost:5173
 
 # Flask Configuration
 FLASK_APP=app.py
