--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "bakery-backend",
+  "version": "1.0.0",
+  "description": "Backend API for the Bakery Project",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.1",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
