--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bakery-backend": "file:",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1",
-    "cors": "^2.8.5"
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
