Add BookTab component and update styles
- Created `BookTab.jsx` component for booking functionality.
- Added `book-tab.css` for styling the BookTab component.
- Updated `main.css` to include global style adjustments.
- Modified `App.jsx` to integrate the new BookTab component.
- Updated `package.json` and `package-lock.json` for dependency changes.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "frontend": "file:",
+    "lucide": "^0.507.0",
+    "lucide-react": "^0.507.0",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
