--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
