--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:cucumber": "cucumber-js"
   },
   "dependencies": {
     "frontend": "file:",
@@ -18,6 +19,8 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^11.2.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -26,6 +29,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "puppeteer": "^24.8.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0"
   }
 }
