--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -54,7 +54,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 # SQLAlchemy database URL for your bakery project
-sqlalchemy.url = sqlite:///C:\Users\mouti\Desktop\BakeryProject\backend\instance\new_bakery_reviews.db
+sqlalchemy.url = sqlite:///instance/new_bakery_reviews.db
 
 # Logging configuration
 [loggers]
