--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,14 +24,16 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/vite-monorepo": "github:vitejs/vite#main",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "puppeteer": "^24.8.0",
+    "terser": "^5.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "vite": "^6.2.0"
+    "vite": "^4.3.9"
   }
 }
